kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prebid
---
apiVersion: v1
kind: Service
metadata:
  namespace: prebid
  name: prebid-cache
  labels:
    app: prebid-cache
    role: server
    env: prod
spec:
  ports:
    - name: http
      port: 2424
    - name: admin
      port: 2425
  selector:
    app: prebid-cache
    role: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prebid
  name: prebid-cache
  labels:
    app: prebid-cache
    role: server
    env: prod
spec:
  selector:
    matchLabels:
      app: prebid-cache
      role: server
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 3
  template:
    metadata:
      labels:
        app: prebid-cache
        role: server
    spec:
      containers:
        - name: server
          image: us.gcr.io/custom-citadel-106116/prebid-cache:___VERSION___
          livenessProbe:
            failureThreshold: 3
            httpGet:
              port: 2424
            periodSeconds: 5
            timeoutSeconds: 1
          ports:
            - { containerPort: 2424,    name: http }
          readinessProbe:
            failureThreshold: 3
            httpGet:
              port: 2424
            periodSeconds: 5
            timeoutSeconds: 1
          resources:
            requests: { cpu: 2, memory: 8Gi }
            limits:   { cpu: 2, memory: 8Gi }
      nodeSelector:
        cloud.google.com/gke-nodepool: stable-4cpu-15gb

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: prebid
  name: prebid-cache
  labels:
    app: prebid-cache
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - prebidcache.gamoshi.io
    secretName: prebidcache-gamoshi-io-auto-tls
  - hosts:
    - prebidcache.gambid.io
    secretName: prebidcache-gambid-io-auto-tls
  - hosts:
    - prebidcache.gsh.io
    secretName: prebidcache-gsh-io-auto-tls
  rules:
  - host: prebidcache.gamoshi.io
    http: { paths: [ { backend: { serviceName: prebid-server, servicePort: 2424 } } ] }
  - host: prebidcache.gambid.io
    http: { paths: [ { backend: { serviceName: prebid-server, servicePort: 2424 } } ] }
  - host: prebidcache.gsh.io
    http: { paths: [ { backend: { serviceName: prebid-server, servicePort: 2424 } } ] }
---
